# yamio

./: .gitignore  Makefile  README.md  requirements.txt  setup.cfg
src/yamio/: __init__.py  _helpers.py  dolfin.py  helpers.py  hip.py  mesh.py  mesh_utils.py  tiny_3d_engine.py
src/yamio/dolfin/: __init__.py  _dolfin.py
src/yamio/ensight/: gold.py
src/yamio/hip/: __init__.py  hip.py  xdmf2_utils.py
src/yamio/vis/: matplotlib.py  pyvista.py
tests/: test_hip.py
