[metadata]
name = yamio
version = attr: yamio.__version__
author = L. F. Pereira
author_email = luisfgpereira95@gmail.com
description = A bridge between pyhip and meshio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lpereira95/yamio
project_urls =
    Homepage = https://github.com/lpereira95/yamio
	Bug Tracker = https://github.com/lpereira95/yamio/issues
classifiers =
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering
keywords =
    mesh
    file formats
    scientific computing
    finite elements

[options]
package_dir =
	= src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    meshio >= 5.2

[options.packages.find]
where = src

[options.extras_require]
all =
    pyhip >= 0.4
    h5py
vis = 
    pyvista >= 0.33
    matplotlib

